fix bug where light/dark mode switch isn't in the right position when the user loads the site the first time with preferred dark mode add a sun icon on the switch in light mode and a moon icon in dark mode (icons are drawn by me so no copyright issues)

--- a/assets/sass/_components.sass
+++ b/assets/sass/_components.sass
@@ -272,3 +272,12 @@
       transform-origin: 50% 50%
       transition: transform 0.5s cubic-bezier(.19,1,.22,1)
       will-change: transform
+
+  &_icon
+    height: 1rem
+    width: 1rem
+    margin: 0
+    z-index: 4
+    position: absolute
+    transform: translateY(-50%)
+    transition: transform 0.5s cubic-bezier(.19,1,.22,1)
